# caligo

./: Aptfile  Dockerfile  Procfile  config.env_sample  pyproject.toml  requirements.txt  session.py
caligo/: command.py  conversation.py  log.py
caligo/core/: command_dispatcher.py  telegram_bot.py
caligo/modules/: core.py  debug.py  direct_link_generator.py  gdrive.py  misc.py  moderation.py  sticker.py  system.py
caligo/util/: __init__.py  aria2.py  config.py  media_utils.py  time.py
caligo/util/db/: base.py  change_stream.py  client.py  client_session.py  collection.py  command_cursor.py  cursor.py  cursor_base.py  db.py  errors.py  types.py
