#
# Packaging
#

[tool.poetry]
name = "caligo"
version = "1.0.0"
description = "selfbot for Telegram."
authors = ["Adek Maulana <adek@techdro.id>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/adekmaulana/caligo"
documentation = "https://github.com/adekmaulana/caligo/blob/master/README.md"

# Search info
keywords = ["chat", "telegram", "selfbot", "telegram-bot", "pyrogram"]
classifiers = [
    "Development Status :: 2 - Staging",
    "Environment :: Console",
    "Environment :: No Input/Output (Daemon)",
    "Framework :: AsyncIO",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: Linux/macOS",
    "Topic :: Internet",
    "Topic :: Communications",
    "Topic :: Communications :: Chat"
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/adekmaulana/caligo/issues"
"Community" = ""

[tool.poetry.dependencies]
python = ">=3.8,<4"

# Core
aiohttp = "^3.8.3"
aiorun = "^2022.11.1"
colorlog = "^6.7.0"
pymongo = "^4.3.3"
Pyrogram = { git = "https://github.com/wulan17/pyrogram.git", branch = "master"}
python-dotenv = "^0.21.0"
TgCrypto = "^1.2.5"

# Core Extra
dnspython = "^2.2.1"

# Aria
aioaria2 = "^1.3.4"

# System
meval = "^2.5"
GitPython = "^3.1.29"
speedtest-cli = "^2.1.3"
# Debug
beauty-print = "^0.6.1"

# GoogleDrive
google-api-python-client = "^2.70.0"
google-auth-httplib2 = "^0.1.0"
google-auth-oauthlib = "^0.8.0"

# Util
aiofile = "^3.8.1"
aiopath = ">=0.5.12"
beautifulsoup4 = "^4.11.1"
emoji = "^2.2.0"
Pillow = "^9.3.0"
tenacity = "^8.1.0"

[tool.poetry.dev-dependencies]
isort = {version = "^5.11.2", extras = ["pyproject"]}
mypy = "^0.991"
pre-commit = "^2.20.0"
yapf = "^0.32.0"

[tool.poetry.scripts]
caligo = "caligo.main:main"

#
# Code formatting
#

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88


#
# Build system (for pip)
#

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
